--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("/images/30215.jpg");
+    background-image: url("images/30215.jpg");
     height: 500px;
 
 }
